<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="words">words</string>

    <string name="app_name">Comfort Reader</string>
    <string name="app_text_after_shareweblink">Read with Comfort Reader (experimential)</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="next_button">"&gt;&gt;"</string>
    <string name="previous_button">"&lt;&lt;"</string>
    <string name="play_button"> ∣∣ > </string>
    <string name="georgia">fontname</string>
    <string name="wordsperminuteSetting">words per minute</string>
    <string name="title_activity_custommenu">CustommenuActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_another_fullscreen">AnotherFullscreenActivity</string>
    <string name="title_activity_note">Annotation Editor</string>
    <string name="title_activity_settings">Settings</string>




    <string name="settings_title_readingoptions">Reading</string>
    <string name="settings_title_supportoptions">Support</string>
    <string name="settings_title_gamification_options">Gamification</string>
    <string name="settings_help_title">Get help</string>

    <string name="settings_title_textoptions">Text</string>

    <string name="settings_recent_texts">Load recent text</string>
    <string name="settings_recent_texts_summary">Continue reading something</string>
    <string name="settings_filepicker_title">Current pdf, txt or epub file</string>

    <string name="settings_positionslider_title">Position</string>

    <string name="settings_wpm_title">Reading speed</string>
    <string name="settings_wpn_summary">Words per minute:</string>

    <string name="settings_minwords_title">Minimum line length</string>
    <string name="settings_minwords_summary">Line should have more than</string>
    <string name="settings_minwords_summary2">characters</string>

    <string name="settings_maxwords_title">Maximum line length</string>
    <string name="settings_maxwords_summary">Line should have less than</string>
    <string name="settings_maxwords_summary2">characters</string>

    <string name="settings_title_appearanceoptions">Appearance</string>
    <string name="settings_title_linktoappearanceoptions">Change appearance</string>
    <string name="settings_fontsize_title">Font size</string>

    <string name="settings_removesweepingeffectbutton_title">Remove sweeping effect</string>

    <string name="settings_fontname_title">Typeface</string>
    <string name="settings_fontname_summary"></string>
    <string name="settings_textcolor_title">Text color</string>
    <string name="settings_textcolor_summary">normal color</string>
    <string name="settings_focuscolor_title">Focus color</string>
    <string name="settings_focuscolor_summary">flowing letters</string>

    <string name="settings_loadcopyandpaste_title">Reading temporary text</string>
    <string name="settings_loadcopyandpaste_outputmessage_on">You can now read what you copied. Switch Off to get back to your text</string>
    <string name="settings_loadcopyandpaste_outputmessage_off">You are now reading</string>

    <string name="settings_fromcopypaste_summary">Switch On to paste copied text</string>



    <string name="settings_gamification_summary">Wordpoints earned:</string>

    <string name="settings_gamification_title">Transform words</string>


    <string name="settings_statistics_summary">You\'ve read</string>
    <string name="settings_statistics_summary2">words in</string>
    <string name="settings_statistics_summary3">minutes (tap to reset).</string>

    <string name="settings_statistics_title">Read-o-meter</string>
    <string name="settings_statistics_sectiontitle">Statistics</string>

    <string name="settings_backgroundcolor_title">Background color</string>
    <string name="settings_backgroundcolor_summary"></string>
    <string name="settings_deviceorientation_title">Device orientation</string>
    <string name="settings_deviceorientation_summary">behavior during device rotation</string>
    <string name="settings_deviceorientation_default">Default system behavior</string>
    <string name="settings_deviceorientation_portrait">Fixed Portrait mode</string>
    <string name="settings_deviceorientation_landscape">Fixed Landscape mode</string>

    <string name="notes_savebutton">Add this note</string>
    <string name="notes_readnotebutton">View notes</string>
    <string name="notes_message_done_saving_note">Done writing out to</string>
    <string name="notes_title_current_notebook">Your notes:</string>


   <string name="support_standarttext">____________________TAP TO PLAY_____________ Welcome to Comfort Reader! Before you begin, here are some tips.
\n ———READING——— \nTo start and pause reading, tap in the middle of the screen. To skip backward, tap the left side of the screen. To skip forward, tap the right side. Keep your finger pressed a little bit longer to skip longer text at once.\n———SETTINGS———\nTo go to the settings, pause and tap on the gearwheel icon in the upper left corner.\nIn the settings, you can adjust your reading speed and the size of the text chunks. An average person reads 200-250 words per minute. Over time, you may become faster as Comfort Reader is designed to reduce visual stress. You can also modify your position and change the appearance of the text. Choose a typeface that fits your style. Comfort Reader supports Sans, Serif, Mono and OpenDyslexic and various colors.\n———LOAD A TEXT———\nThere are 4 ways to load a text.\n1) In the settings, you can import a \"txt\", \"pdf\" or \"epub\" file that resides on the internal memory of your device.\n2) Open the settings menu. Paste and edit your text manually.\n3) Start a third party file manager of your choice. Search and select your \"txt\", \"pdf\" or \"epub\" file. Then choose \'Read with Comfort Reader\'.\n4) Open a website or a wikipedia article in your browser. Use the \"share\" option of your browser and select \"Comfort Reader\". A text version of the website will show up in Comfort Reader.\n———NOTES———\nOn the upper right, tap on the "pen" icon and add a note. A note contains your comment and the text passage you are currently commenting on.\nFor each book, Comfort Reader saves your notes in a separate text file within the \"Comfort Reader\" directory inside your internal memory. In case you don\'t need to comment and just want to add an interesting part of text to your notes, keep your finger pressed in the middle of the screen.———EXTRA TIPS———\nUse the volume buttons to pause and fine-tune reading speed. Volume down means +1 wpm while you read. When you are paused, it means -1 wpm. Make use of your peripheral vision: keep \"Review and Preview\" switched on in your settings. Many people use Comfort Reader to reduce eye fatigue. They prefer light text on dark background and wider fonts like OpenDyslexia. \n———— Thank you for your time! Enjoy your reading! —————</string>

    <string name="fullscreen_text_while_loading">...Loading text...\n Please wait.</string>
    <string name="fullscreen_copied_title">Copied text</string>

    <string name="settings_filepicker_loadingtext">Loading pdf takes some time. You may also prepare a txt from pdf on a computer</string>

    <string name="settings_helplines_title">Preview and Review</string>
    <string name="settings_helplines_summary">Additional lines of text above and under the current line (peripheral vision)</string>

    <string name="settings_insertmanually_title">Copy &amp; Paste, Edit</string>
    <string name="settings_insertmanually_summary_empty">Enter text manually</string>
    <string name="settings_insertmanually_summary_textloaded">Text entered: </string>
    <string name="settings_insertmanually_filepath">inserted manually</string>

    <string name="feedback_opinionquestion_subtitle"></string>
    <string name="feedback_opinionquestion_title">Do you find this app useful?</string>
    <string name="feedback_opinionquestion_positive">Yes</string>
    <string name="feedback_opinionquestion_negative">No</string>
    <string name="feedback_positiveopinionquestion_subtitle"></string>
    <string name="feedback_positiveopinionquestion_title">This app is free and open-source. It survives thanks to your support. Would you like to leave a rating on the play store?</string>
    <string name="feedback_positiveopinionquestion_positive">Okay</string>
    <string name="feedback_positiveopinionquestion_negative">No</string>
    <string name="feedback_negativeopinionquestion_subtitle"></string>
    <string name="feedback_negativeopinionquestion_title">Sorry for that. You can help us fix the problem. Would you like to send feedback?</string>
    <string name="feedback_negativeopinionquestion_positive">Send feedback</string>
    <string name="feedback_negativeopinionquestion_negative">Later</string>

    <string name="feedback_thankyou_title">Thank you!</string>
    <string name="feedback_thankyou_subtitle">To keep Comfort Reader open and free from annoying ads, please consider donating on its webpage.</string>

    <string name="error_file_format_not_supported">Text file format not supported. Make sure to use txt, epub or pdf files containing digital text.</string>
</resources>
